--- a/README
+++ b/README
@@ -48,3 +48,5 @@ cp /sdcard/build.prop /system/build.prop
 
 
 you can download a compiled .apk version from the 'homepage' above; 'unknown sources' has to be checked, use astro or similar to install from sdcard. 
+
+report bugs at http://code.google.com/p/net-widgetron-propeditor/issues/list 
