--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,4 +7,6 @@
 <string name="disclaimer">This is highly experimental code, my first Android app, and not guaranteed to do anything right. Use at your own risk. Save a backup before editing and visually inspect any edited files.</string>
 <string name="resolve_edit">Prop Editor</string>
 <string name="instructions">See net-widgetron-propeditor on googlecode for instructions</string>
+<string name="up_one_level">..</string>
+<string name="current_dir">.</string>
 </resources>
